[feat] 문자열 계산기 main 구현